# system-plugin

./: CMakeLists.txt  Makefile.am
etc/: fstab_3parts
packaging/: system-plugin.spec
rules/: 61-system-plugin-n4.rules
scripts/: 2parts_env.sh  headless_env.sh  init.wrapper  init.wrapper.overlayfs
scripts/pico/: init.wrapper
src/session-bind/: CMakeLists.txt  session-bind.c
units/: opt-usr-fsck.service  opt-usr.mount  session-bind@.service  wait-mount@.service
