CMAKE_MINIMUM_REQUIRED(VERSION 3.9.4)
PROJECT(session-bind C)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED libtzplatform-config)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIE")

ADD_EXECUTABLE(${PROJECT_NAME} session-bind.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} -pie)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
